demoargo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: demoargo
spec:
  rules:
  - http:
      paths:
      - path: /truc
        pathType: Prefix
        backend:
          service:
            name: demo-service
            port:
              number: 80
